--- a/aspnetcoreoauth/Views/SampleTestEntities/Index.cshtml
+++ b/aspnetcoreoauth/Views/SampleTestEntities/Index.cshtml
@@ -1,4 +1,4 @@
-﻿@model IEnumerable<aspnetcoreoauth.Models.EThorTestEntity>
+﻿@model IEnumerable<aspnetcoreoauth.Models.SampleTestEntity>
 
 @{
     ViewData["Title"] = "Index";
