--- a/aspnetcoreoauth/Views/Shared/_HardProperty.cshtml
+++ b/aspnetcoreoauth/Views/Shared/_HardProperty.cshtml
@@ -1,4 +1,4 @@
-﻿@model aspnetcoreoauth.Models.EThorTestEntity
+﻿@model aspnetcoreoauth.Models.SampleTestEntity
 
 <fieldset>
     <legend>HardProperty</legend>
