--- a/aspnetcoreoauth/Views/SampleTestEntities/Create.cshtml
+++ b/aspnetcoreoauth/Views/SampleTestEntities/Create.cshtml
@@ -1,4 +1,4 @@
-﻿@model aspnetcoreoauth.Models.EThorTestEntity
+﻿@model aspnetcoreoauth.Models.SampleTestEntity
 
 @{
     ViewData["Title"] = "Create";
@@ -6,7 +6,7 @@
 
 <h1>Create</h1>
 
-<h4>EThorTestEntity</h4>
+<h4>SampleTestEntity</h4>
 <hr />
 <div class="row">
     <div class="col-md-4">
