--- a/aspnetcoreoauth/Views/SampleTestEntities/Delete.cshtml
+++ b/aspnetcoreoauth/Views/SampleTestEntities/Delete.cshtml
@@ -1,4 +1,4 @@
-﻿@model aspnetcoreoauth.Models.EThorTestEntity
+﻿@model aspnetcoreoauth.Models.SampleTestEntity
 
 @{
     ViewData["Title"] = "Delete";
@@ -8,7 +8,7 @@
 
 <h3>Are you sure you want to delete this?</h3>
 <div>
-    <h4>EThorTestEntity</h4>
+    <h4>SampleTestEntity</h4>
     <hr />
     <dl class="row">
         <dt class = "col-sm-2">
