--- a/aspnetcoreoauth/Views/SampleTestEntities/Details.cshtml
+++ b/aspnetcoreoauth/Views/SampleTestEntities/Details.cshtml
@@ -1,4 +1,4 @@
-﻿@model aspnetcoreoauth.Models.EThorTestEntity
+﻿@model aspnetcoreoauth.Models.SampleTestEntity
 
 @{
     ViewData["Title"] = "Details";
@@ -7,7 +7,7 @@
 <h1>Details</h1>
 
 <div>
-    <h4>EThorTestEntity</h4>
+    <h4>SampleTestEntity</h4>
     <hr />
     <dl class="row">
         <dt class = "col-sm-2">
