--- a/aspnetcoreoauth/Views/Shared/_LoginPartial.cshtml
+++ b/aspnetcoreoauth/Views/Shared/_LoginPartial.cshtml
@@ -6,7 +6,7 @@
         @if (SignInManager.IsSignedIn(User))
         {
             <li class="nav-item">
-                <a class="nav-link text-dark" asp-area="" asp-controller="EThorTestEntities" asp-action="Index">eThorEntity-CRUD</a>
+                <a class="nav-link text-dark" asp-area="" asp-controller="SampleTestEntities" asp-action="Index">SampleEntity-CRUD</a>
             </li>
             <li class="nav-item">
                 <a class="nav-link text-dark" asp-area="Identity" asp-page="/Account/Manage/Index" title="Manage">Hello @User.Identity.Name!</a>
